@@ -24,6 +24,7 @@ Mantis
  * Fixed print_assign_to_option_list() to accurately reflect settings.
  * Fixed print_reporter_option_list() to accurately reflect settings.
  * Fixed the access level checks to be more accurate.
+ * Fixed summary by category to work when categories have single quotes.
  * Removed site_settings link in print_manage_doc_menu().
  * Renamed doc/CONFIGURATION to doc/CUSTOMIZATION.
  * Modified edit user links to use the username instead of the [edit] link.
